# maestro

./: .goreleaser.yaml  README.md  go.mod  notes.md  pyproject.toml
.github/workflows/: releases.yml
cmd/maestro/: main.go
cmd/maestro/commands/: init.go  pull.go  root.go  version.go
design/: cli-interface.md
internal/maestro/: Group.go  Repository.go  Resource.go  executor.go
internal/maestro/commands/: add.go  config.go  init.go  pull.go  root.go  version.go
internal/maestro/engine/: executor.go
internal/maestro/git/commands/: GitPull.go
internal/maestro/utils/: FileSystemUtils.go
internal/maestro/workspace/: initializer.go  manager.go
src/maestro/: cli.py
